--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  height: 60px;
+  width: 100vw;
+  background-color: #9cacbf;
+  color: #0a1417;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  display: flex;
+  align-items: center;
+}
+.imgLogo {
+  width: 40px;
+  height: 40px;
+
+  background-image: url('../public/earth-europe-solid.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.logoName h3 {
+  margin: 0%;
+  margin-left: 10px;
+  padding: 0;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+}
+.search input {
+  height: 40px;
+  width: 30vw;
+  padding-left: 40px;
+  border: none;
+  border-radius: 10px;
+
+  background-image: url('../public/magnifying-glass-location-solid.svg');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position-x: 10px;
+  background-position-y: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.container {
+  display: flex;
+  flex-direction: row;
 }
