--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,61 @@ header {
   background-position-y: center;
 }
 
+.markerInfoContainer {
+  z-index: 999999;
+  position: absolute;
+  left: 5px;
+  top: 65px;
+  width: 20vw;
+  height: 60vh;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px 2px #0a1417;
+  background-color:#9cacbf;
+  color: aliceblue;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.markerInfoContainer h3 {
+  font-size: 24px;
+  font-weight: 600;
+}
+.markerInfoContainer p {font-size: 14px;}
+
+.buttonClose {
+  background-color: #9cacbf;
+  border: none;
+  color: aliceblue;
+  font-size: 24px;
+  
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+.sliderButton {
+  border-radius: 7px;
+  margin: 5px;
+  border: none;
+  background-color: #032e42;
+  color: aliceblue;
+  padding: 5px 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
 
 .container {
   display: flex;
   flex-direction: row;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
 }
