--- a/src/App.css
+++ b/src/App.css
@@ -65,10 +65,24 @@ header {
   text-align: center;
 }
 .markerInfoContainer h3 {
+  margin: 10px 0;
   font-size: 24px;
   font-weight: 600;
 }
-.markerInfoContainer p {font-size: 14px;}
+.markerInfoContainer p {
+  font-size: 14px; 
+  margin: 5px 0;
+  font-weight: 600;
+}
+.markerInfoContainer span {
+  font-size: 14px; 
+  margin: 5px 0;
+  font-weight: bold;
+}
+.carousel {
+  margin: 10px 0;
+}
+.carouselImage {border-radius: 7px;}
 
 .buttonClose {
   background-color: #9cacbf;
