--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
 }
 
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
+.markersdetails {
+  width: 30%;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
