--- a/src/components/addNewMarkerInfo/addNewMarker.css
+++ b/src/components/addNewMarkerInfo/addNewMarker.css
@@ -1,11 +1,11 @@
 .addingForm {
     z-index: 999999;
     position: absolute;
-    width: 50vw;
+    width: 70vw;
     height: 70vh;
     padding: 20px;
     margin-top: 5%;
-    margin-left: -50%;
+    margin-left: -60%;
     border-radius: 10px;
     box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
     background-color:#9cacbf;
@@ -35,3 +35,21 @@
     background-color: #032e42;
     border-radius: 10px;
 }
+.form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 80%;
+}
+.inputForm {
+    width: 45%;
+    margin-right: 20px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.uploader {width: 45%;}
